--- a/Client/public/html/index.html
+++ b/Client/public/html/index.html
@@ -24,7 +24,7 @@
       <li><a href="/">Home</a></li>
       <li><a href="#">About</a></li>
       <li><a href="/shop">Shop</a></li>
-      <li><a href="#">Contact</a></li>
+      <li><a href="#contactus">Contact</a></li>
     </ul>
   </nav>
 
@@ -69,13 +69,13 @@
     <div style="width: 100%; height: 1000px; margin-top: 80px;">
       <h1 class="title" style="text-align: center;">WHAT WE DO ?</h1>
       <div class="servicesssss" style="display: flex;justify-content: center;">
-        <div class="services" style="">
+        <div class="services">
           <img style="width: 100px; margin-top: 20px;" src="/service1.png" alt="">
           <h3>Awesome Choices</h3>
           <p style="width: 25rem;">We pick the coolest laptops and desktops from top brands. So, whether you need a
             powerful work machine or an everyday computer, we've got the good stuff—all in one place!</p>
         </div>
-        <div class="services" style="">
+        <div class="services">
           <img style="width: 100px; margin-top: 20px;" src="/service3.png" alt="">
 
           <h3>Tech Help,No Stress</h3>
@@ -83,7 +83,7 @@
             you all the details you need. We've got reviews, comparisons, and everything else to help you choose the
             perfect computer without the tech jargon.</p>
         </div>
-        <div class="services" style="">
+        <div class="services">
           <img style="width: 100px; margin-top: 20px;" src="/service2.png" alt="">
           <h3>You Come First</h3>
           <p style="width: 25rem;">We're all about making you happy. Shop without worries - our website is easy to use,
@@ -166,9 +166,9 @@
           <p></p>
         </div>
         <div class="footer-box" style="width: 40rem;">
-          <p><b>Contact Us</b></p>
-          <p>Github :<a target="_blank  " href="https://github.com/Naveenravi07/innov8-stackup">&nbsp;&nbsp; <i
-                class="fa-brands fa-github"></i></a>
+          <p style="font-size: 2rem; font-weight: 600;" id="contactus">Contact Us</p>
+          <p style="font-size: 1.5rem; font-weight: 600;">Github :<a target="_blank  "
+              href="https://github.com/Naveenravi07/innov8-stackup">&nbsp;&nbsp; <i class="fa-brands fa-github"></i></a>
           </p>
 
         </div>
