Minor Frontend changes

--- a/Client/public/html/index.html
+++ b/Client/public/html/index.html
@@ -19,7 +19,8 @@
 
   <nav id="example-1"> <!-- Change position to relative -->
     <span
-      style="font-size: 30px; font-family: Verdana, Geneva, Tahoma, sans-serif; color: #fff; margin-left: 30px;margin-top: 5px;">Innove</span>
+      style="font-size: 30px; font-family: Verdana, Geneva, Tahoma, sans-serif; color: #fff; margin-left: 30px;margin-top: 5px;">I8-Stores
+    </span>
     <ul style="position: absolute; top: 0; right: 30px;">
       <li><a href="/">Home</a></li>
       <li><a href="#">About</a></li>
@@ -33,10 +34,12 @@
     <div class="container">
       <div class="row">
         <div class="col-md-6">
-          <p id="para">Welcome to I8- </p>
+          <p id="para" style="margin-left: 10rem; width: 30rem;">Welcome to I8-
+          </p>
           <br>
 
-          <p style="font-weight: 500; font-size: 20px;margin-bottom: 20px; width: 50rem; ">Welcome
+          <p style="font-weight: 500; font-size: 20px;margin-bottom: 20px; width: 50rem;">
+            Welcome
             to
             I8 Store, your
             one-stop destination for cutting-edge laptops and desktops. Dive into a world of technology where
